--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -43,25 +43,27 @@
                 alert("내용을 입력해주세요.");
                 return;
             }
-            let form = $('#frm')[0];
-            let params = new FormData(form);
-            $.ajax({
-                url :"/home/new",
-                data : params,
-                datatype : 'json',
-                enctype: 'multipart/form-data',
-                type : "POST",
-                processData: false,
-                contentType: false,
-                success : function(result){
-                    if(result == 'notFile'){
-                        alert('이미지 파일이 존재 하지 않습니다.');
-                    } else {
-                        alert('저장 완료되었습니다.');
-                        location.href="/home/show?page=0";
+            if(confirm('등록하시겠습니까?')){
+                let form = $('#frm')[0];
+                let params = new FormData(form);
+                $.ajax({
+                    url :"/home/new",
+                    data : params,
+                    datatype : 'json',
+                    enctype: 'multipart/form-data',
+                    type : "POST",
+                    processData: false,
+                    contentType: false,
+                    success : function(result){
+                        if(result == 'notFile'){
+                            alert('이미지 파일이 존재 하지 않습니다.');
+                        } else {
+                            alert('저장 완료되었습니다.');
+                            location.href="/home/show?page=0";
+                        }
                     }
-                }
-            });
+                });
+            }
         }
         function BTN_REG2(){
             let title = $("#title2").val();
@@ -74,25 +76,27 @@
                 alert("내용을 입력해주세요.");
                 return;
             }
-            let form = $('#frm')[0];
-            let params = new FormData(form);
-            $.ajax({
-                url :"/home/modify",
-                data : params,
-                datatype : 'json',
-                enctype: 'multipart/form-data',
-                type : "POST",
-                processData: false,
-                contentType: false,
-                success : function(result){
-                    if(result == 'notFile'){
-                        alert('이미지 파일이 존재 하지 않습니다.');
-                    } else {
-                        alert('수정 완료되었습니다.');
-                        location.href="/home/show?page=0";
+            if(confirm('수정하시겠습니까?')){
+                let form = $('#frm')[0];
+                let params = new FormData(form);
+                $.ajax({
+                    url :"/home/modify",
+                    data : params,
+                    datatype : 'json',
+                    enctype: 'multipart/form-data',
+                    type : "POST",
+                    processData: false,
+                    contentType: false,
+                    success : function(result){
+                        if(result == 'notFile'){
+                            alert('이미지 파일이 존재 하지 않습니다.');
+                        } else {
+                            alert('수정 완료되었습니다.');
+                            location.href="/home/show?page=0";
+                        }
                     }
-                }
-            });
+                });
+            }
         }
     </script>
 </head>
@@ -100,7 +104,7 @@
 <div class="wrap container">
     <header>
         <!-- action 속성 디폴트 값은 해당 페이지 호출할때와 같은 방식으로 처리 -->
-        <form action="" method="get" class="d-flex mb-4">
+        <form action="/home/show" method="get" class="d-flex mb-4">
             <input type="hidden" id="page" name="page" value="0">
             <div class="col-5">
                 <span class="display-4 font-weight-bold text-primary no_line"><a href="/home/show?page=0" style="text-decoration: none;">KIMSTAGRAM</a></span>
@@ -110,7 +114,7 @@
                     <div class="input-group mb-2">
                         <input type="text" class="form-control" id="searchWord" name="searchWord">
                         <div class="input-group-append">
-                            <button type="button" class="btn btn-secondary">검색</button>
+                            <button type="submit" class="btn btn-secondary">검색</button>
                         </div>
                     </div>
                 </div>
@@ -121,8 +125,8 @@
         <ul class="nav nav-fill h-100 align-items-center">
             <li class="nav-item"><a href="/home/show?page=0" class="text-dark no_line" style="text-decoration: none;">Home</a></li>
             <li class="nav-item"><a href="/home/new" class="text-dark no_line" style="text-decoration: none;">New</a></li>
-            <li class="nav-item"><a href="" class="text-dark no_line" style="text-decoration: none;">Follow</a></li>
-            <li class="nav-item"><a href="" class="text-dark no_line" style="text-decoration: none;">MyPage</a></li>
+            <li class="nav-item"><a href="/home/follow" class="text-dark no_line" style="text-decoration: none;">Follow</a></li>
+            <li class="nav-item"><a href="/home/mypage" class="text-dark no_line" style="text-decoration: none;">MyPage</a></li>
         </ul>
     </nav>
     <section class="d-flex">
@@ -181,7 +185,7 @@
                                 <span class="font-weight-bold">글내용<br></span>
                                 <textarea name="content" cols="30" rows="10" id="content2" th:text="${content.content}"></textarea>
                             </div>
-                            <button class="btn" type="button" onclick="BTN_REG2()">등록</button>
+                            <button class="btn" type="button" onclick="BTN_REG2()">수정</button>
                             <a href="/home/show?page=0">
                                 <button class="btn"
                                         type="button">취소
