--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -25,12 +25,8 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 			integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 			crossorigin="anonymous"></script>
+	<script src="/js/common.js"></script>
 	<script type="text/javascript">
-		function logOut(){
-			if(confirm('로그아웃 하시겠습니까?')){
-				location.href="/login/logout";
-			}
-		}
 	</script>
 </head>
 <body>
