--- a/src/main/resources/templates/follow.html
+++ b/src/main/resources/templates/follow.html
@@ -25,52 +25,70 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Jua&display=swap" rel="stylesheet">
     <script src="/js/common.js"></script>
     <script type="text/javascript">
 
-        
+
     </script>
 </head>
 <body>
-<div class="wrap container">
+<div class="wrap" style="width: 1500px">
     <header>
         <!-- action 속성 디폴트 값은 해당 페이지 호출할때와 같은 방식으로 처리 -->
         <form action="/home/show" method="get" class="d-flex mb-4" id="frm">
             <input type="hidden" id="page" name="page" value="0">
-            <div class="col-5">
-                <span class="display-4 font-weight-bold text-primary no_line"><a href="/home/show?page=0" style="text-decoration: none;">KIMSTAGRAM</a></span>
+            <div class="col-4">
+                <span class="display-4 font-weight-bold"><a href="/home/show?page=0" class="text-secondary" style="text-decoration: none;">KIMSTAGRAM</a></span>
             </div>
-            <div class="col-7">
-                <div class="h-100 d-flex align-items-center">
+            <div class="col-6">
+                <div class="h-100 d-flex align-items-end">
                     <div class="input-group mb-2">
                         <input type="text" class="form-control" id="searchWord" name="searchWord">
                         <div class="input-group-append">
-                            <button type="submit" class="btn btn-secondary">검색</button>
+                            <button type="submit" class="btn btn-secondary font_style">검색</button>
                         </div>
                     </div>
                 </div>
             </div>
         </form>
     </header>
-    <nav class="bg-primary">
+
+
+    <nav class="bg-secondary" style="border-radius: 5px;">
         <ul class="nav nav-fill h-100 align-items-center">
-            <li class="nav-item"><a href="/home/show?page=0" class="text-dark" style="text-decoration: none;">Home</a></li>
-            <li class="nav-item"><a href="/home/new" class="text-dark" style="text-decoration: none;">New</a></li>
-            <li class="nav-item"><a href="/home/follow" class="text-dark" style="text-decoration: none;">Follow</a></li>
-            <li class="nav-item"><a href="/home/mypage" class="text-dark" style="text-decoration: none;">MyPage</a></li>
+            <li class="nav-item"><a href="/home/show?page=0" class="text-light font_style" style="text-decoration: none;">Home</a></li>
+            <li class="nav-item"><a href="/home/new" class="text-light font_style" style="text-decoration: none;">New</a></li>
+            <li class="nav-item"><a href="/home/follow" class="text-light font_style" style="text-decoration: none;">Follow</a></li>
+            <li class="nav-item"><a href="/home/mypage" class="text-light font_style" style="text-decoration: none;">MyPage</a></li>
         </ul>
     </nav>
     <section class="d-flex">
         <aside>
-            <div class="bg-warning"
-                 style="width: 150px; height: 150px; border-radius: 5px;">
-                <h5>
-                    안녕하세요 <br th:text="${nick}+'('+${name}+')님'">
+            <div class="bg-secondary mt-3 p-3"
+                 style="width: 250px; height: 500px; border-radius: 5px; margin-right: 30px">
+                <h5 class="font_style mb-2">
+                    안녕하세요<br th:text="${nick}+'('+${name}+')님'">
                 </h5>
-                <br>
-                <button class="btn" type="button" onclick="logOut()">Logout</button>
+                <img src="/img/facebook.png" alt="프로필 사진" style="width: 220px; height:250px;" class="mb-4">
+                <div class="d-flex">
+                    <a href="/home/profile"><button class="btn font_style" type="button" style="width: 130px;">Profile</button></a>
+                    <button class="ml-2 btn font_style" type="button" onclick="logOut()" style="width: 80px;">Logout</button>
+                </div>
             </div>
         </aside>
+
+
+
+
+
+
+
+
+
+
         <article style="height: 1000px;">
             <table border="1">
                 <thead>
