--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -34,7 +34,7 @@
             let obj = $("#editObj").val();
             let url = "/home/profileEditPopUp?obj=" + obj;
             let name = "editPopUp";
-            let option = "width = 500, height = 500, top = 100, left = 200, location = no";
+            let option = "width = 500, height = 400, top = 50, left = 200, location = no";
             window.open(url,name,option);
         }
         function editEmail(){
@@ -49,21 +49,89 @@
             $("#editObj").val("비밀번호");
             popUp();
         }
+        function editProfileImg(){
+            $("#editObj").val("프로필");
+            popUp();
+        }
     </script>
 </head>
 <body>
-    <input type="hidden" id="editObj" name="editObj" value="">
-    <div>
-        <h4 th:text="${member.email}"></h4>
-        <button type="button" class="btn btn-primary" onclick="editEmail()">이메일 수정</button>
-    </div>
-    <div>
-        <h4 th:text="${member.nick}"></h4>
-        <button type="button" class="btn btn-primary" onclick="editNick()">닉네임 수정</button>
-    </div>
-    <div>
-        <h4>**********</h4>
-        <button type="button" class="btn btn-primary" onclick="editPwd()">비밀번호 변경</button>
-    </div>
+<div class="wrap" style="width: 1500px">
+    <header>
+        <!-- action 속성 디폴트 값은 해당 페이지 호출할때와 같은 방식으로 처리 -->
+        <form action="/home/show" method="get" class="d-flex mb-4" id="frm">
+            <input type="hidden" id="page" name="page" value="0">
+            <div class="col-4">
+                <span class="display-4 font-weight-bold"><a href="/home/show?page=0" class="text-secondary" style="text-decoration: none;">KIMSTAGRAM</a></span>
+            </div>
+            <div class="col-6">
+                <div class="h-100 d-flex align-items-end">
+                    <div class="input-group mb-2">
+                        <input type="text" class="form-control" id="searchWord" name="searchWord">
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-secondary font_style">검색</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </header>
+
+
+    <nav class="bg-secondary" style="border-radius: 5px;">
+        <ul class="nav nav-fill h-100 align-items-center">
+            <li class="nav-item"><a href="/home/show?page=0" class="text-light font_style" style="text-decoration: none;">Home</a></li>
+            <li class="nav-item"><a href="/home/new" class="text-light font_style" style="text-decoration: none;">New</a></li>
+            <li class="nav-item"><a href="/home/follow" class="text-light font_style" style="text-decoration: none;">Follow</a></li>
+            <li class="nav-item"><a href="/home/mypage" class="text-light font_style" style="text-decoration: none;">MyPage</a></li>
+        </ul>
+    </nav>
+    <section class="d-flex">
+        <aside>
+            <div class="bg-secondary mt-3 p-3"
+                 style="width: 250px; height: 500px; border-radius: 5px; margin-right: 30px">
+                <h5 class="font_style mb-2">
+                    안녕하세요<br th:text="${nick}+'('+${name}+')님'">
+                </h5>
+                <img th:src="'/upload/'+${profileImg}" alt="프로필 사진" style="width: 220px; height:250px;" class="mb-4">
+                <div class="d-flex">
+                    <a href="/home/profile"><button class="btn font_style" type="button" style="width: 130px;">Profile</button></a>
+                    <button class="ml-2 btn font_style" type="button" onclick="logOut()" style="width: 80px;">Logout</button>
+                </div>
+            </div>
+        </aside>
+
+
+
+
+
+
+
+
+
+
+        <article style="height: 1000px;">
+            <input type="hidden" id="editObj" name="editObj" value="">
+            <div>
+                <h4 th:text="${member.email}"></h4>
+                <button type="button" class="btn btn-secondary" onclick="editProfileImg()">프로필 사진 수정</button>
+            </div>
+            <div>
+                <h4 th:text="${member.email}"></h4>
+                <button type="button" class="btn btn-secondary" onclick="editEmail()">이메일 수정</button>
+            </div>
+            <div>
+                <h4 th:text="${member.nick}"></h4>
+                <button type="button" class="btn btn-secondary" onclick="editNick()">닉네임 수정</button>
+            </div>
+            <div>
+                <h4>**********</h4>
+                <button type="button" class="btn btn-secondary" onclick="editPwd()">비밀번호 변경</button>
+            </div>
+        </article>
+    </section>
+</div>
+</body>
+</html>
 </body>
 </html>
